--- a/utilisateur.css
+++ b/utilisateur.css
@@ -40,7 +40,33 @@ header div a{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #5ce1e625;
+    padding: 2em;
+    border-radius: 50px;
+}
+.body form ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
 }
 .body form ul li{
     list-style-type: none;
+}
+.body form ul li input{
+    width: 30em;
+    height:3em;
+    margin-bottom: 25px;
+}
+.body form ul li label{
+    font-weight: 600;
+    color: #c1ff72;
+}
+.button{
+    background-color: #5ce1e6;
+    border: none;
+    border-radius: 10px;
+}
+.button:hover{
+    background-color: #c1ff72;
 }
